--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "express": "^4.13.3",
+    "lodash": "^4.0.0",
     "pg": "^4.4.3",
     "sequelize": "^3.17.1"
   },
