--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sequelize": "^3.17.1"
   },
   "devDependencies": {
+    "jshint": "^2.9.1",
     "sequelize-cli": "^2.2.1"
   },
   "repository": {
