--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
+    "lint": "node node_modules/eslint/bin/eslint.js ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,7 +25,9 @@
     "sequelize": "^3.17.1"
   },
   "devDependencies": {
-    "jshint": "^2.9.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.16.1",
+    "eslint-plugin-standard": "^1.3.1",
     "sequelize-cli": "^2.2.1"
   },
   "repository": {
