--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "express": "^4.13.3",
     "lodash": "^4.0.0",
     "pg": "^4.4.3",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "sequelize": "^3.17.1"
   },
   "devDependencies": {
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
     "eslint-plugin-standard": "^1.3.1",
