--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev-server": "nodemon server.js",
     "lint": "node node_modules/eslint/bin/eslint.js ./",
+    "build": "browserify -t [ babelify --presets [ react ] ] --extension=jsx public/js/main.js -o public/dist/bundle.js",
+    "watch": "npm run watch-js & npm run watch-server",
+    "watch-js": "watchify -t [ babelify --presets [ react ] ] --extension=jsx public/js/main.js -o public/dist/bundle.js --debug --verbose",
+    "watch-server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "browserify": "^13.0.0",
     "express": "^4.13.3",
     "lodash": "^4.0.0",
     "pg": "^4.4.3",
@@ -34,7 +38,8 @@
     "eslint-plugin-react": "^3.16.1",
     "eslint-plugin-standard": "^1.3.1",
     "nodemon": "^1.9.1",
-    "sequelize-cli": "^2.2.1"
+    "sequelize-cli": "^2.2.1",
+    "watchify": "^3.7.0"
   },
   "repository": {
     "type": "git",
