--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Database of movie award nominations and winners.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev-server": "nodemon server.js",
     "lint": "node node_modules/eslint/bin/eslint.js ./",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.16.1",
     "eslint-plugin-standard": "^1.3.1",
+    "nodemon": "^1.9.1",
     "sequelize-cli": "^2.2.1"
   },
   "repository": {
